exports[`HiRouter renders IndexTestComponent and returns '/' 1`] = `
<p>
  /
</p>
`;

exports[`HiRouter renders MultipleTestComponent and returns list of urls (multiple routes) 1`] = `
<ul>
  <li>
    test
  </li>
  <li>
    test/100/other
  </li>
</ul>
`;

exports[`HiRouter renders SingleTestComponent returning its own url (single route only) 1`] = `
<p>
  test
</p>
`;
